# AdventureRPG

./: CMakeLists.txt  TODO.md  compile_commands.json
.cache/clangd/index/: AudioHandler.cpp.8BC2CFE2C2A8FCAC.idx  AudioHandler.hpp.77575FD7A0ABFD92.idx  CameraHandler.cpp.B9DA29E2C5E3E292.idx  CameraHandler.hpp.CFD1ECAAD65CE771.idx  Collectable.cpp.B97B4653600CEF98.idx  Collectable.hpp.46BF60534C6BCEDF.idx  CollectableHandler.cpp.F99F7C4644280788.idx  Config.hpp.998E5DA85D39D874.idx  Engine.cpp.2CEBF083A9B0AADB.idx  Engine.cpp.40352C5158760158.idx  Engine.hpp.190028A0379B7BA4.idx  Engine.hpp.88F742953D652ADC.idx  Entity.cpp.45558CD73607C234.idx  Entity.cpp.63CFB727B079257E.idx  Entity.cpp.C2A22F7C56CEF8F7.idx  Entity.hpp.30477D6083451F7B.idx  Entity.hpp.E215998326D02AD4.idx  EntityHandler.cpp.1D7AC508212F9B8F.idx  EntityHandler.hpp.0436310DF467A725.idx  HUD.cpp.2699D1A9DDEB2906.idx  Item.hpp.6BBE59196FAAD0AE.idx  Main.cpp.655E33B31EC6EE64.idx  (+22 more)
Debug/: CMakeCache.txt  Game  Makefile  cmake_install.cmake
graphics/Layouts/: Player Menu.rgl
include/: Config.hpp  Engine.hpp  Window.hpp
include/Audio/: AudioHandler.hpp
include/Camera/: CameraHandler.hpp
include/Entity/: Collectable.hpp  Entity.hpp  EntityHandler.hpp  Mob.hpp  Player.hpp
include/Items/: Item.hpp  Weapon.hpp
include/Map/: Map.hpp  Tile.hpp
include/UI/: UI.hpp
include/raylib/: raygui.h
src/: Engine.cpp  Main.cpp
src/Audio/: AudioHandler.cpp
src/Camera/: CameraHandler.cpp
src/Entity/: EntityHandler.cpp  Mob.cpp  Player.cpp
src/UI/: HUD.cpp  UI.cpp
test/: layout_name.c  test-raygui.cpp
(+3 files in other folders)
